# music-sheet-maker

./: .gitignore  CLAUDE.md  PLAN.md  RESEARCH.md  main.py  pyproject.toml
.github/: copilot-instructions.md
backend/: main.py  pyproject.toml
backend/pipeline/: __init__.py  build_score.py  chords.py  separate.py  transcribe.py
backend/tests/: conftest.py  test_bpm_estimation.py  test_chord_normalization.py  test_key_detection.py  test_payphone_integration.py
docs/plans/: 2026-03-14-chord-detection-accuracy-loop.md
frontend/: package-lock.json  package.json  vite.config.ts
frontend/src/lib/: api.ts
frontend/src/lib/components/: AudioPlayer.svelte  ProgressBar.svelte  SheetRenderer.svelte  UploadZone.svelte
frontend/src/routes/: +layout.svelte  +page.svelte
