[project]
name = "music-sheet-maker"
version = "0.1.0"
description = "Convert MP3 songs to piano sheet music with melody and chords"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "python-multipart>=0.0.9",
    "sse-starlette>=2.0.0",
    "demucs>=4.0.0",
    "basic-pitch>=0.4.0",
    "chord-extractor>=0.1.3",
    "music21>=9.1.0",
    "soundfile>=0.12.0",
    "numpy>=1.24.0",
    "pretty-midi>=0.2.10",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.0",
    "pytest-asyncio>=1.0.0",
]

[project.scripts]
dev = "uvicorn backend.main:app --reload --host 0.0.0.0 --port 8000"

# ---------------------------------------------------------------------------
# Pytest configuration
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
# Run from repo root: pytest backend/tests/
testpaths = ["backend/tests"]
# -m "not slow" skips integration tests that require the audio file + ML models
markers = [
    "slow: marks tests as slow (require audio file and ML model loading)",
]
# Exclude slow integration tests by default
addopts = "-m 'not slow' -v"
