[project]
name = "music-sheet-maker-backend"
version = "0.1.0"
description = "FastAPI backend for MP3 to piano sheet music conversion"
readme = "../README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "python-multipart>=0.0.9",
    "sse-starlette>=2.0.0",
    "demucs>=4.0.0",
    "basic-pitch>=0.4.0",
    "chord-extractor>=0.1.3",
    "music21>=9.1.0",
    "soundfile>=0.12.0",
    "numpy>=1.24.0",
    "pretty-midi>=0.2.10",
]

[project.scripts]
dev = "uvicorn backend.main:app --reload --host 0.0.0.0 --port 8000"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
